[package]
name = "srp_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.24", features=["serde"]}
fern = {version="0.6.2", features=["colored"]}
log = "0.4.17"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
wow_login_messages = {version="0.2.0", features=["tokio"]}
